# praline

./: Cargo.toml  README.md  bootstrap.sh
data/: geom_r135.jsonl  geom_r135_err_latest.jsonl  geom_r135_gold_latest.jsonl
src/: algo.rs  geometry.rs  lib.rs
tools/: run_geom_r135.rs
