[package]
name = "praline"
version = "0.1.0"
edition = "2018"
authors = ["Peter Jin"]
license = "Apache-2.0"

[profile.dev]
#opt-level = 0
opt-level = 1
debug = true
overflow-checks = true
panic = "abort"
codegen-units = 256
incremental = true
lto = false

[profile.release]
opt-level = 3
debug = true
overflow-checks = true
panic = "abort"
codegen-units = 1
incremental = false
lto = false

[dependencies]
fxhash = { path = "../fxhash" }
regex_syntax = { path = "../regex/regex-syntax" }
rng = { path = "../rng" }
rustc_serialize = { path = "../rustc_serialize" }
smol_str = { path = "../smol_str", default-features = false }
time = { path = "../time-0.1" }

[[bin]]
name = "run_geom_r135"
path = "tools/run_geom_r135.rs"
